--- a/MuFirstProject/build.gradle
+++ b/MuFirstProject/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation ('org.junit.jupiter:junit-jupiter-api:5.7.0',
             "com.codeborne:selenide:5.25.0")
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 compileJava.options.encoding = 'UTF-8'
